--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,12 @@
 [submodule "bundle/setcolors.vim"]
 	path = bundle/setcolors.vim
 	url = https://github.com/felixhummel/setcolors.vim.git
+[submodule "bundle/tmuxline.vim"]
+	path = bundle/tmuxline.vim
+	url = https://github.com/edkolev/tmuxline.vim.git
+[submodule "/home/pi/.vim/bundle/vim-airline-themes"]
+	path = /home/pi/.vim/bundle/vim-airline-themes
+	url = https://github.com/vim-airline/vim-airline-themes
+[submodule "/home/pi/.vim/bundle/vim-airline"]
+	path = /home/pi/.vim/bundle/vim-airline
+	url = https://github.com/vim-airline/vim-airline
